--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "engines": {
         "node": ">0.8.x"
     },
+    "dependencies": {
+        "coffee-script" : "1.6.3"
+    },
     "main": "./lib/daemonize.js"
 }
